# sudoku_killer

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  processor.cpp  processor.h  sudoku.cpp  sudoku.h  svm.yml  trainer.cpp  trainer.h
